# sarvam-bike-assistant

./: .env.example  .gitignore  AGENTS.md  requirements.txt
backend/: logging_ctx.py  main.py  pyproject.toml  requirements.txt  store.py
backend/inference/: __init__.py  expander.py  generator.py  history.py  pipeline.py  reranker.py  retriever.py
backend/ingestion/: __init__.py  chunker.py  classifier.py  document_index.py  embedder.py  indexer.py  ingest.py  parser.py
backend/input/: language.py  stt.py  vision.py
backend/output/: __init__.py  tts.py
backend/routes/: bikes.py  ingest.py  input.py  output.py  query.py  session.py
docs/: PLAN.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/upload/: route.ts
frontend/app/api/upload-file/: route.ts
frontend/app/chat/: page.tsx
frontend/components/: CitationBlock.tsx  FollowupChips.tsx  InputBar.tsx  MessageCard.tsx  SeverityBadge.tsx  ThreadSidebar.tsx
frontend/lib/: api.ts
scripts/: index_library.py  start_docker.sh  start_local.sh  stop_local.sh
tests/: conftest.py  test_bucket_e.py  test_bucket_fixes.py  test_part_1.py  test_part_10.py  test_part_11.py  test_part_2.py  test_part_3.py  test_part_4.py  test_part_5.py  test_part_6.py  test_part_7.py  test_part_8.py  test_part_9.py
tests/fixtures/: sample_response.json  sample_table.json
