[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "openai>=2.37.0",
    "pymupdf>=1.26.5",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.1",
    "rank-bm25>=0.2.2",
    "uvicorn[standard]>=0.39.0",
    "python-multipart>=0.0.9",
    "aiofiles>=24.1.0",
    "requests>=2.32.0",
    "numpy>=1.24.0",
    "httpx>=0.24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "requests>=2.32.5",
]
